Adding stream factory method that takes source and sink(s) to create complete declaration at once